fix colors.  spacing on IE is still a bit off.
git-svn-id: http://svn.dojotoolkit.org/src/trunk@5870 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/src/widget/templates/AccordionPane.css
+++ b/src/widget/templates/AccordionPane.css
@@ -8,7 +8,7 @@
 
 .dojoAccordionPane .label {
 	border-bottom: thick ridge #232323;
-	background: grey;
+	background: gray;
 	color: #fff;
 	font-weight: bold;
 }
